fixed pre text resizing on mobile

--- a/src/98e.css
+++ b/src/98e.css
@@ -902,6 +902,8 @@ pre {
   margin: 0;
   color: white;
   font-family: "Perfect DOS VGA 437 Win", monospace;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 
   * {
     font-family: "Perfect DOS VGA 437 Win", monospace;
